--- a/twosides.tex
+++ b/twosides.tex
@@ -1,3 +1,5 @@
+%!TEX root = main.tex
+
  A sequence of subjects choosing each choosing from the same fixed set of action which only affect them directly, as in our frst model, while eliciting advice for those subjects from a fixed set of experts, as in our seccond model. 
 At each step a subject arrives, experts recieve signals conditional on the subject, reports of experts are submited to the mechanism, the subject observes the action chosen by the mechanisms, picks an action and receives a reward, the mechanism then uses the observed reports, action and reward to assign payments to the experts.
 
@@ -32,7 +34,7 @@ As the mechanism (representing the collective of subjects ideally?  what about t
 
 
 
-\sectionP{Efficicency of the mechanism}
+\section{Efficicency of the mechanism}
 
 
 
