--- a/defs.tex
+++ b/defs.tex
@@ -14,6 +14,8 @@
 
 %\doi{XXXXXXX.XXXXXXX}% TeXSupport
 
+\newcommand{\DBA}[1]{{\color{blue} {\bf[ DBA}: #1 {\bf]}}}
+
 % Any additional packages needed should be included after jmlr2e.
 % Note that jmlr2e.sty includes epsfig, amssymb, natbib and graphicx,
 % and defines many common macros, such as 'proof' and 'example'.
@@ -108,6 +110,7 @@ showonlyrefs=true % or false in draft mode
 \newtheorem{claim}[thm]{Claim}
 \newtheorem{rem}{Remark}
 \newtheorem{eg}{Example}
+\newtheorem{con}{Conjecture}
 % Different font in captions
 
 
