--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\title{Decision Advice Good Incentives Freedom}
+\title{Eliciting Decision Advice with Good Incentives\\l and Decision-Maker Freedom}
 
 \author{Della Penna and Balduzzi}
 
