--- a/twosides.tex
+++ b/twosides.tex
@@ -1,4 +1,5 @@
 %!TEX root = main.tex
+\section{Two-sides}
 
  A sequence of subjects choosing each choosing from the same fixed set of action which only affect them directly, as in our frst model, while eliciting advice for those subjects from a fixed set of experts, as in our seccond model. 
 At each step a subject arrives, experts recieve signals conditional on the subject, reports of experts are submited to the mechanism, the subject observes the action chosen by the mechanisms, picks an action and receives a reward, the mechanism then uses the observed reports, action and reward to assign payments to the experts.
@@ -19,7 +20,7 @@ While existing results for bayesian incentive compatible exploration and its lim
 \section{A sequence of one shot mechanisms does not explore}
 
 Attempting to run the single action elicitation mechanism at the start of each period does not preserve its incentive compatibility or its efficiency.
-The single shot mechanism creates incentives that are equivalent to a greedy policy that only exploits and does not exploit. If we reveal the outcome of the round to all experts,  no agent can internalize the information revelation that comes from the outcome of a action. On the other hand, if we only allow the winner of the bidding on a given round 
+The single shot mechanism creates incentives that are equivalent to a greedy policy that only exploits and does not exploit. If we reveal the outcome of the round to all experts,  no agent can internalize the information revelation that comes from the outcome of a action. On the other hand, if we only allow the winner of the bidding on a given round to have access to the subject's outcome, then the mechanism is extremely data-inefficient.
 
 \section{A Direct Mechanism with Strong Common knowledge}
 
@@ -34,7 +35,7 @@ As the mechanism (representing the collective of subjects ideally?  what about t
 
 
 
-\section{Efficicency of the mechanism}
+\section{Efficiency of the mechanism}
 
 
 
